--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cosmetics-server",
+  "name": "app-motocicletas-server",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
