--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cosmetics-client",
+  "name": "app-motocicletas-client",
   "version": "0.1.0",
   "private": true,
   "proxy": "http://localhost:5000",
@@ -8,12 +8,12 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^4.6.0",
+    "firebase": "^8.6.2",
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "uniqid": "^5.3.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
